--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 
-# VOLCENGINE_API_KEY=b5174d03-404a-4687-b40c-b4d2fa384549
-# # VOLCENGINE_ENDPOINT_ID=ep-20251129231245-w794g
-# VOLCENGINE_BASE_URL=https://ark.cn-beijing.volces.com/api/v3/responses
 VOLCENGINE_API_KEY=b5174d03-404a-4687-b40c-b4d2fa384549
 VOLCENGINE_ENDPOINT=ep-20251130155645-kk4hf
 VOLCENGINE_BASE_URL=https://ark.cn-beijing.volces.com/api/v3/chat/completions
+
+TAVILY_API_KEY=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
+TAVILY_API_URL=https://api.tavily.com/search
+
+MONGODB_URI = mongodb+srv://aalezbs_db_user:zhang0813yu@clusteraiagent.wrzvhvi.mongodb.net/?appName=ClusterAIAgent
+MONGODB_DB = ai_agent_one
