--- a/package.json
+++ b/package.json
@@ -24,24 +24,28 @@
     "pre-commit": "npx lint-staged"
   },
   "dependencies": {
+    "@modern-js/plugin-bff": "2.69.1",
     "@modern-js/runtime": "2.69.1",
+    "mongodb": "^7.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@modern-js/plugin-bff": "2.69.1"
+    "tavily": "^1.0.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@modern-js/app-tools": "2.69.1",
     "@modern-js/tsconfig": "2.69.1",
-    "@biomejs/biome": "1.9.4",
-    "typescript": "~5.7.3",
     "@types/jest": "~29.2.4",
     "@types/node": "~18.11.9",
     "@types/react": "^18.3.11",
     "@types/react-dom": "~18.3.1",
+    "autoprefixer": "^10.4.22",
     "lint-staged": "~15.4.0",
-    "simple-git-hooks": "^2.11.1",
+    "postcss": "^8.5.6",
     "rimraf": "^6.0.1",
+    "simple-git-hooks": "^2.11.1",
     "ts-node": "~10.8.1",
-    "tsconfig-paths": "~3.14.1"
+    "tsconfig-paths": "~3.14.1",
+    "typescript": "~5.7.3"
   }
 }
