--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 
-VOLCENGINE_API_KEY=b5174d03-404a-4687-b40c-b4d2fa384549
-VOLCENGINE_ENDPOINT=ep-20251130155645-kk4hf
-VOLCENGINE_BASE_URL=https://ark.cn-beijing.volces.com/api/v3/chat/completions
+VOLCENGINE_API_KEY=YOURS
+VOLCENGINE_ENDPOINT=YOURS
+VOLCENGINE_BASE_URL=YOURS
 
-TAVILY_API_KEY=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
-TAVILY_API_URL=https://api.tavily.com/search
+TAVILY_API_KEY=YOURS
+TAVILY_API_URL=YOURS
 
-MONGODB_URI = mongodb+srv://aalezbs_db_user:zhang0813yu@clusteraiagent.wrzvhvi.mongodb.net/?appName=ClusterAIAgent
-MONGODB_DB = ai_agent_one
+MONGODB_URI = YOURS
+MONGODB_DB = YOURS
